@@ -125,6 +125,8 @@ library:
     @tab General eXchange Format SMPTE 360M, used by Thomson Grass Valley
          playout servers.
 @item iCEDraw File              @tab   @tab X
+@item ICO                       @tab   @tab X
+    @tab Microsoft Windows ICO
 @item id Quake II CIN video     @tab   @tab X
 @item id RoQ                    @tab X @tab X
     @tab Used in Quake III, Jedi Knight 2 and other computer games.
